# cs

./: README.md
CIS263/Assignment1/: CMakeLists.txt  house.h  main.cpp  parr.cpp
CIS263/Assignment2/: CMakeLists.txt  MyStack.h  main.cpp  parr.cpp
CIS263/Assignment3/: CMakeLists.txt  bst.h  main.cpp  parr.cpp
CIS263/Assignment4/: CMakeLists.txt  parr.cpp
CIS263/Assignment5/: CMakeLists.txt  parr.cpp  test.cpp
CIS263/homework3/: a.out  main.c
CIS263/homework4/: file_checker.sh
CIS263/proj1/: CMakeLists.txt  functions.c  functions.h  infile  makefile  outfile  p  p1.c
CIS263/proj2/: main.c  makefile  operations.c  operations.h  s  storelog.txt
CIS263/proj3/: backup.sh
CIS263/proj4/: caverage.awk  dat  dumb.awk  filesummary.awk  makefile  pwfile.awk
CIS343/: OoGlE.md  file_utils.c  file_utils.h  javascript.md  makefile  reverse  reverse.c  sample.rev  sample.txt
CIS343/four/: README.md  cli-audio
CIS343/in_class_1/: InconceivableSadness.lex  UncontrollableBowelMovements.y
CIS343/javascrpt_proj/: OoGlE.md
CIS343/lang_demo/: addr.lex  person.lex
CIS343/one/: README.md  file_utils.c  file_utils.h  makefile  reverse  reverse.c  sample2.txt  sample3.txt
CIS343/paper/: calc.ex  erlang.aux  erlang.tex
CIS343/three/: a.out  lex.yy.c  notes  oop  sample.zjs  y.tab.c  zjs  zjs.c  zjs.h  zjs.lex  zjs.tab.c  zjs.tab.h  zjs.y  zoomjoystrong.c  zoomjoystrong.lex  zoomjoystrong.y
CIS365/: main.tex  teammates.txt
CIS365/VO/: .gitignore
CIS365/halite/: Iron.py  IronWErrors  MyBot.py  README.md  bot.py  clean.sh  destructor-offshoot  destructor.py  dummy.py  overmind.py  policy_net.py  requirements.txt  run.sh  temp.py  train.sh  update.py
CIS365/halite-o/: IronWErrors  destructor-offshoot  overmind.py  run_game.sh
CIS365/p1/: main.tex
CIS452/: Homework 7.md  a.out  homework4.md  homework7.md  sample3.c  shelly.c  shelly.cc
CIS452/lab1/: a.out  gdbsample.c  labone.md  memleak.c  noecho.cc
CIS452/lab10/: code.c  proj.cc  writeup.md
CIS452/lab11/: Lab 11.md  a.out  sample1.c  sample2.c  writeup.md
CIS452/lab12/: sample1.c  softJunk  writeup.md
CIS452/lab2/: Lab 2.md  a.out  sample1.c  sample2.c  sample3.c  sample4.c
CIS452/lab3/: Lab 3.md  a.out  sample1.c  sample2.c  siggy.c
CIS452/lab4/: a.out  lab4.md  sample1.c  sample2.cc  sample3.c
CIS452/lab5/: a.out  sample1.c  sample1part4.c  writer.c  writeup.md
CIS452/lab6/: a.out  sample1.c  writeup.md
CIS452/lab7/: a.out  count.c  file_lim.c  lim.c  writeup.md
CIS452/lab8/: a.out  mem_sample.c  unbreak.c  writeup.md
CIS452/lab9/: a.out  sample1.c  writeup.md
CIS457/: mininet.txt
CIS457/chat/: .nfs000000000904e00300002147  .nfs000000000904fda900002154  ChatClient.cc  ChatServer.cc  Client.cc  Crypto.cc  Makefile  README.md  Server.cc  Succ.cc  Test.cc  User.cc  rsa_priv.pem  rsa_pub.pem
CIS457/lab_1/: client  client.c  copy.txt  makefile  server  server.c
CIS457/lab_2/: client  client.c  makefile  server  server.c
CIS457/lab_3/: client  packet-sniffer.c  ps  server
CIS457/lab_4/: Makefile  client  client.c  code.md  server  server.c
CIS457/lab_5/: Makefile  client  client.cc  server  server.cc  writeup.md
CIS457/mininet@192.168.35.131/: documentation.aux  documentation.tex  testing.txt
CIS457/project_1/: .gitignore  Makefile  c  client.c  client.py  documentation.dvi  makefile  s  sample.txt  sample_copy.txt  server.c  server.py
CIS457/router/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  documentation.tex  main.cc  notes  prj2-net.py  r1-table.txt  r2-table.txt  router
CIS457/router/include/router/: ARPHeader.hpp  DNS.hpp  ETHHeader.hpp  Error.hpp  ICMPHeader.hpp  IPHeader.hpp  NetworkInterface.hpp  Router.hpp  TableLookup.hpp
CIS457/router/src/: #Router.cc#  ARPHeader.cc  Error.cc  Router.cc  TableLookup.cc  a.out  main.cc  mininet@172.16.12.128  router
CIS457/swerv/: .gitignore  CMakeLists.txt  README.md  writeup.md
CIS457/swerv/include/swerv/: core.h  core.hpp
CIS457/swerv/src/: core.cc  main.cc
CIS467/: Proposition.md
CIS677/crystal/: .gitignore  CMakeLists.txt  README.md  requirements.txt  visualize.py  writeup.aux  writeup.tex
CIS677/crystal/include/crystal/: crystal.hpp  particle.hpp
CIS677/crystal/src/: crystal.cc  main.cc  main.cpp  particle.cc
CIS677/muscle_contraction/: CMakeLists.txt  CUDA Human Anatomy Modeling.md  a.out  main.cu  muscle.cu
CIS677/muscle_contraction/include/muscle/: muscle.h
CIS677/muscle_contraction/src/: main.cu  muscle.cu
CIS677/n_queens/: nq  (+4 more)
CIS678/: 2-12-2019.md  2-19-2019.md  2-26-2019.md  HomeworkJanuary15th.md  notes02-05-19.md
MTH327/: dot_products.ipynb
(+150 files in other folders)
